humberger menu styled

--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
   <body>
     <header>
       <nav>
+        <a href="#" class="logo">
+          <img src="/My-Project/images/logo.svg" alt="logo" />
+        </a>
+
         <div class="links">
           <ul class="header-list">
-            <li class="logo">
-              <a href="#">
-                <img src="/My-Project/images/logo.svg" alt="logo" />
-              </a>
-            </li>
             <li>
               <a href="#">Features</a>
             </li>
@@ -57,9 +56,9 @@
         <a href="#">Features</a>
         <a href="#">Pricing</a>
         <a href="#">Resources</a>
-        <hr>
+        <hr />
         <a href="#">Login</a>
-        <a href="#">Sign Up</a>
+        <a href="#" class="hum-sign-in">Sign Up</a>
       </div>
     </header>
 
