features section complete

--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
       </form>
     </section>
 
+    <div class="background"></div>
+
     <section class="features-title">
       <h2>Advanced Statistics</h2>
       <p>
@@ -95,40 +97,52 @@
     </section>
 
     <section class="features">
-      <div class="first-feature">
-        <img
-          src="/My-Project/images/icon-brand-recognition.svg"
-          alt="brand-recognition"
-        />
-        <h2>Brand Recognition</h2>
-        <p>
-          Boost your brand recognition with each click. Generic links don’t mean
-          a thing. Branded links help instil confidence in your content.
-        </p>
+      <div class="feature">
+        <div class="image">
+          <img
+            src="/My-Project/images/icon-brand-recognition.svg"
+            alt="brand-recognition"
+          />
+        </div>
+        <div class="detailes">
+          <h2>Brand Recognition</h2>
+          <p>
+            Boost your brand recognition with each click. Generic links don’t
+            mean a thing. Branded links help instil confidence in your content.
+          </p>
+        </div>
       </div>
 
-      <div class="second-feature">
-        <img
-          src="/My-Project/images/icon-detailed-records.svg"
-          alt="Detailed Records"
-        />
-        <h2>Detailed Records</h2>
-        <p>
-          Gain insights into who is clicking your links. Knowing when and where
-          people engage with your content helps inform better decisions.
-        </p>
+      <div class="feature">
+        <div class="image">
+          <img
+            src="/My-Project/images/icon-detailed-records.svg"
+            alt="Detailed Records"
+          />
+        </div>
+        <div class="detailes">
+          <h2>Detailed Records</h2>
+          <p>
+            Gain insights into who is clicking your links. Knowing when and
+            where people engage with your content helps inform better decisions.
+          </p>
+        </div>
       </div>
 
-      <div class="third-feature">
-        <img
-          src="/My-Project/images/icon-fully-customizable.svg"
-          alt="Fully Customizable"
-        />
-        <h2>Fully Customizable</h2>
-        <p>
-          Improve brand awareness and content discoverability through
-          customizable links, supercharging audience engagement.
-        </p>
+      <div class="feature">
+        <div class="image">
+          <img
+            src="/My-Project/images/icon-fully-customizable.svg"
+            alt="Fully Customizable"
+          />
+        </div>
+        <div class="detailes">
+          <h2>Fully Customizable</h2>
+          <p>
+            Improve brand awareness and content discoverability through
+            customizable links, supercharging audience engagement.
+          </p>
+        </div>
       </div>
     </section>
 
