mobile design comlete

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     </section>
 
     <section class="features">
+      <div class="line"></div>
       <div class="feature">
         <div class="image">
           <img
@@ -146,7 +147,7 @@
       </div>
     </section>
 
-    <section class="ending">
+    <section class="boost">
       <h2>Boost your links today</h2>
       <a href="#">Get Started</a>
     </section>
