humberger menue added

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         </div>
 
         <div class="humberger">
-          <div class="first-hum"></div>
-          <div class="second-hum"></div>
-          <div class="third-hum"></div>
+          <div id="first-hum"></div>
+          <div id="second-hum"></div>
+          <div id="third-hum"></div>
         </div>
       </nav>
 
