--- a/index.html
+++ b/index.html
@@ -81,9 +81,19 @@
 
     <section class="input">
       <form action="#">
-        <input type="url" placeholder="Shorten a link here..." />
-        <button>Shorten It!</button>
+        <input type="text" placeholder="Shorten a link here..." />
+        <p class="err">Please add a link</p>
+        <button type="submit">Shorten It!</button>
       </form>
+    </section>
+
+    <section class="answers">
+      <!-- <div>
+        <p>long url</p>
+        <hr>
+        <a href="#">short url</a>
+        <button>copy</button>
+      </div> -->
     </section>
 
     <div class="background"></div>
