folder struture correction

--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
       href="/My-Project/images/favicon-32x32.png"
       type="image/png"
     />
-    <link rel="stylesheet" href="/My-Project/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/My-Project/style/main.css" />
+    <link rel="stylesheet" href="/My-Project/style/header.css" />
+    <link rel="stylesheet" href="/My-Project/style/humberger.css" />
+    <link rel="stylesheet" href="/My-Project/style/banner.css" />
+    <link rel="stylesheet" href="/My-Project/style/input.css" />
+    <link rel="stylesheet" href="/My-Project/style/answers.css" />
+    <link rel="stylesheet" href="/My-Project/style/features.css" />
+    <link rel="stylesheet" href="/My-Project/style/boost.css" />
+    <link rel="stylesheet" href="/My-Project/style/footer.css" />
     <title>URL Shortening API</title>
   </head>
 
@@ -229,5 +243,7 @@
       </div>
     </footer>
   </body>
-  <script src="/My-Project/mail.js"></script>
+  <script src="/My-Project/script/humMenu.js"></script>
+  <script src="/My-Project/script/checkEmpty.js"></script>
+  <script src="/My-Project/script/urlShortener.js"></script>
 </html>
