header  banner styled for 1440px

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     />
     <link rel="stylesheet" href="/My-Project/style/main.css" />
     <link rel="stylesheet" href="/My-Project/style/header.css" />
+    <link rel="stylesheet" href="/My-Project/style/header(1440px).css" />
     <link rel="stylesheet" href="/My-Project/style/humberger.css" />
     <link rel="stylesheet" href="/My-Project/style/banner.css" />
+    <link rel="stylesheet" href="/My-Project/style/banner(1440px).css" />
     <link rel="stylesheet" href="/My-Project/style/input.css" />
     <link rel="stylesheet" href="/My-Project/style/answers.css" />
     <link rel="stylesheet" href="/My-Project/style/features.css" />
@@ -30,22 +32,24 @@
   <body>
     <header>
       <nav>
-        <a href="#" class="logo">
-          <img src="/My-Project/images/logo.svg" alt="logo" />
-        </a>
+        <div class="link">
+          <a href="#" class="logo">
+            <img src="/My-Project/images/logo.svg" alt="logo" />
+          </a>
 
-        <div class="links">
-          <ul class="header-list">
-            <li>
-              <a href="#">Features</a>
-            </li>
-            <li>
-              <a href="#">Pricing</a>
-            </li>
-            <li>
-              <a href="#">Resources</a>
-            </li>
-          </ul>
+          <div class="links">
+            <ul class="header-list">
+              <li>
+                <a href="#">Features</a>
+              </li>
+              <li>
+                <a href="#">Pricing</a>
+              </li>
+              <li>
+                <a href="#">Resources</a>
+              </li>
+            </ul>
+          </div>
         </div>
 
         <div class="login">
