hover effect added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <div class="login">
           <ul class="login-list">
-            <li>
+            <li class="login-nav">
               <a href="#">Login</a>
             </li>
             <li class="sign-up">
